Fix for 7046794 and 834