@@ -60,7 +60,6 @@ import java.util.Enumeration;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.logging.Level;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -76,8 +75,6 @@ import com.sun.tools.xjc.generator.bean.field.FieldRendererFactory;
 import com.sun.tools.xjc.model.Model;
 import com.sun.tools.xjc.reader.Util;
 import com.sun.xml.bind.api.impl.NameConverter;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.util.Locale;
 import java.util.logging.Logger;
 
@@ -395,11 +392,9 @@ public class Options
 
     private InputSource fileToInputSource( File source ) {
         try {
-            String uri = new URI("file", source.getCanonicalPath(), null).toASCIIString();
-            return new InputSource(uri);
-        } catch (URISyntaxException ex) {
-            return new InputSource(source.getPath());
-        } catch (IOException ex) {
+            String url = source.toURL().toExternalForm();
+            return new InputSource(Util.escapeSpace(url));
+        } catch (MalformedURLException e) {
             return new InputSource(source.getPath());
         }
     }
@@ -432,13 +427,9 @@ public class Options
     private InputSource absolutize(InputSource is) {
         // absolutize all the system IDs in the input, so that we can map system IDs to DOM trees.
         try {
-            String base = new File(".").getCanonicalFile().getAbsolutePath();
-            URI uri = URI.create(base).resolve(is.getSystemId());
-            if ("file".equals(uri.getScheme())) {
-               uri = new URI(uri.getScheme(), new File(uri).getCanonicalPath(), null);
-            }
-            is.setSystemId(uri.toURL().toExternalForm());
-        } catch( Exception e ) {
+            URL baseURL = new File(".").getCanonicalFile().toURL();
+            is.setSystemId( new URL(baseURL,is.getSystemId()).toExternalForm() );
+        } catch( IOException e ) {
             logger.log(Level.FINE, "{0}, {1}", new Object[]{is.getSystemId(), e.getLocalizedMessage()});
         }
         return is;
